z-index mobile fix

--- a/css/style.css
+++ b/css/style.css
@@ -199,6 +199,7 @@
   left: 3vw;
   opacity: 0.6;
   transition: 0.4s ease-out;
+  z-index: 50;
 }
 
 #todo-open:hover,
@@ -421,6 +422,7 @@
   opacity: 0.6;
   transition: transform 0.5s ease;
   transition: 0.4s ease-out;
+  z-index: 50;
 }
 
 .rotate {
